Adding finalizer in argocd charts.

--- a/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/argo-cd.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/argo-cd.yaml
@@ -1,6 +1,8 @@
 kind: Application
 metadata:
   name: argo-cd
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
