--- a/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/argo-cd.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/argo-cd.yaml
@@ -1,16 +1,13 @@
+apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: argo-cd
-  finalizers:
-  - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
     repoURL: git@github.com:prati08/EKS-ArgoCD-Terraform.git
     path: EKS-ArgoCD-Terraform-Gitops/deployments/charts/argo-cd/
     targetRevision: HEAD
-    helm:
-      version: v3
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
