Changing root-app namespace for staging

--- a/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/staging-app-cluster-1.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/staging-app-cluster-1.yaml
@@ -14,7 +14,7 @@ spec:
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
-    namespace: staging-app-cluster-1
+    namespace: blue-green-rollout
 
 {{- if .Values.rootApp.noSyncPolicy }}
   syncPolicy: null
