--- a/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/staging-app-cluster-1.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/staging-app-cluster-1.yaml
@@ -7,7 +7,7 @@ metadata:
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
-  project: default
+  project: blue-green-rollout
   source:
     repoURL: git@github.com:prati08/EKS-ArgoCD-Terraform.git
     path: EKS-ArgoCD-Terraform-Gitops/single_cluster/01-staging/charts/staging
