--- a/EKS-ArgoCD-Terraform-Gitops/single_cluster/01-staging/charts/staging/templates/staging-blue-green-rollout-app.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops/single_cluster/01-staging/charts/staging/templates/staging-blue-green-rollout-app.yaml
@@ -5,7 +5,7 @@ metadata:
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
-  project: blue-green-rollout
+  project: default
   source:
     repoURL: git@github.com:prati08/EKS-ArgoCD-Terraform.git
     path: EKS-ArgoCD-Terraform-Gitops-Service/deployments/charts/staging/
