--- a/EKS-ArgoCD-Terraform-Gitops/single_cluster/01-staging/charts/staging/templates/staging-blue-green-rollout-app.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops/single_cluster/01-staging/charts/staging/templates/staging-blue-green-rollout-app.yaml
@@ -12,7 +12,7 @@ spec:
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
-    namespace: blue-green-rollout
+    namespace: argocd
 
 {{- if .Values.stageBlueGreenApp.noSyncPolicy }}
   syncPolicy: null
