--- a/EKS-ArgoCD-Terraform-Gitops-Service/deployments/charts/staging/templates/deployment.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops-Service/deployments/charts/staging/templates/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: blue-green-rollout
   labels:
     app: testing
-  namespace: argocd
+  namespace: blue-green-rollout
 spec:
   replicas: 1
   selector:
