--- a/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/prod-app-cluster-1.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/prod-app-cluster-1.yaml
@@ -14,7 +14,7 @@ spec:
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
-    namespace: blue-green-rollout
+    namespace: argocd
 
 {{- if .Values.rootApp.noSyncPolicy }}
   syncPolicy: null
