--- a/EKS-ArgoCD-Terraform-Gitops/single_cluster/01-prod/charts/prod/templates/prod-blue-green-rollout-app.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops/single_cluster/01-prod/charts/prod/templates/prod-blue-green-rollout-app.yaml
@@ -12,7 +12,7 @@ spec:
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
-    namespace: blue-green-rollout
+    namespace: argocd
 
 {{- if .Values.prodBlueGreenApp.noSyncPolicy }}
   syncPolicy: null
