--- a/EKS-ArgoCD-Terraform-Gitops-Service/deployments/charts/prod/templates/service.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops-Service/deployments/charts/prod/templates/service.yaml
@@ -15,7 +15,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: preview-svc
-  namespace: blue-green-rollout
+  namespace: blue-green-rollout-prod
 spec:
   type: ClusterIP
   selector:
