Adding Ingress yaml file and moving service type to Node Port

--- a/EKS-ArgoCD-Terraform-Gitops-Service/deployments/charts/staging/templates/service.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops-Service/deployments/charts/staging/templates/service.yaml
@@ -4,12 +4,13 @@ metadata:
   name: active-svc
   namespace: blue-green-rollout
 spec:
-  type: ClusterIP
+  ports:
+  - port: 80 #service port  #kubeproxy will open port on worker node to which can route traffic to alb
+    targetPort: 8080 #container port
+    protocol: TCP
+  type: NodePort
   selector:
     app: testing
-  ports:
-  - port: 80
-    targetPort: 80
 ---
 apiVersion: v1
 kind: Service
@@ -17,9 +18,10 @@ metadata:
   name: preview-svc
   namespace: blue-green-rollout
 spec:
-  type: ClusterIP
+  ports:
+  - port: 80 #service port  #kubeproxy will open port on worker node to which can route traffic to alb
+    targetPort: 8080 #container port
+    protocol: TCP
+  type: NodePort
   selector:
     app: testing
-  ports:
-  - port: 80
-    targetPort: 80
