Adding support for staging app to run for onprem/aws

--- a/EKS-ArgoCD-Terraform-Gitops-Service/deployments/charts/staging/templates/ingress.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops-Service/deployments/charts/staging/templates/ingress.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.ingress.aws }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -36,3 +37,40 @@ spec:
             name: preview-svc
             port:
               number: 80
+{{- end }}
+
+---
+{{- if .Values.ingress.onprem }}
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name : blue-green-ingress
+  namespace: blue-green-rollout
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  rules:
+###### bluegreen.live.com will be a enduser facing web URL #######
+  - host: bluegreen.live.com
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: active-svc
+            port:
+              number: 80
+###### bluegreen.staging.com will be internal testing web URL (Like for new app version fucntionality for QA testers) ######
+  - host: bluegreen.staging.com
+    http:
+      paths:
+      - path: /staging
+        pathType: Prefix
+        backend:
+          service:
+            name: preview-svc
+            port:
+              number: 80
+{{- end }}
