--- a/EKS-ArgoCD-Terraform-Gitops-Service/deployments/charts/staging/templates/service.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops-Service/deployments/charts/staging/templates/service.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.ingress.aws }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -25,3 +26,33 @@ spec:
   type: NodePort
   selector:
     app: testing
+{{- end }}
+---
+{{- if .Values.ingress.onprem }}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: active-svc
+  namespace: blue-green-rollout
+spec:
+  type: ClusterIP
+  selector:
+    app: testing
+  ports:
+  - port: 80
+    targetPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: preview-svc
+  namespace: blue-green-rollout
+spec:
+  type: ClusterIP
+  selector:
+    app: testing
+  ports:
+  - port: 80
+    targetPort: 80
+{{- end }}
