Changing repo url from ssh to https

--- a/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/argo-cd.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/argo-cd.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: git@github.com:prati08/EKS-ArgoCD-Terraform.git
+    repoURL: https://github.com/prati08/EKS-ArgoCD-Terraform.git
     path: EKS-ArgoCD-Terraform-Gitops/deployments/charts/argo-cd/
     targetRevision: HEAD
   destination:
