--- a/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/argo-cd.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/argo-cd.yaml
@@ -4,7 +4,9 @@ metadata:
   name: argo-cd
   namespace: as-infra
   labels:
-    app.kubernetes.io/managed-by: Helm  
+    app.kubernetes.io/managed-by: Helm
+  annotations:
+    argocd.argoproj.io/sync-wave: "-3"
 spec:
   project: default
   source:
