--- a/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/root-app.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/root-app.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: as-infra
   labels:
     app.kubernetes.io/managed-by: Helm
+  annotations:
+    argocd.argoproj.io/hook: PostSync
 spec:
   project: default
   source:
