--- a/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/argo-cd.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/argo-cd.yaml
@@ -16,7 +16,7 @@ spec:
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
-    namespace: argocd
+    namespace: as-infra
   syncPolicy:
     syncOptions:
         - CreateNamespace=true
