--- a/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/argo-cd.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/argo-cd.yaml
@@ -6,7 +6,6 @@ metadata:
   labels:
     app.kubernetes.io/managed-by: Helm
   annotations:
-    argocd.argoproj.io/hook: Skip
     argocd.argoproj.io/sync-wave: "-3"
 spec:
   project: default
@@ -19,7 +18,7 @@ spec:
     namespace: as-infra
   syncPolicy:
     syncOptions:
-        - CreateNamespace=true
+        - CreateNamespace=false
     automated:
       selfHeal: true
-      prune: true
+      prune: false
