--- a/EKS-ArgoCD-Terraform-Gitops/single_cluster/01-staging/charts/staging/templates/staging-blue-green-rollout-app.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops/single_cluster/01-staging/charts/staging/templates/staging-blue-green-rollout-app.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: as-infra
   labels:
     app.kubernetes.io/managed-by: Helm
+  argocd.argoproj.io/hook: Skip
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
