--- a/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/argo-rollout.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/argo-rollout.yaml
@@ -17,7 +17,7 @@ spec:
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
-    namespace: argocd
+    namespace: as-infra
   syncPolicy:
   automated:
     prune: true
