--- a/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/root-app.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/root-app.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: as-infra
   labels:
     app.kubernetes.io/managed-by: Helm
-    argocd.argoproj.io/hook: PostSync
+    argocd.argoproj.io/hook: Sync
 spec:
   project: default
   source:
