--- a/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/argo-cd.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/argo-cd.yaml
@@ -15,7 +15,7 @@ spec:
     namespace: as-infra
   syncPolicy:
   automated:
-    prune: true
+    prune: false
     selfHeal: true
   syncOptions:
     - CreateNamespace=false
