--- a/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/argo-cd.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/argo-cd.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: argo-cd
+  name: argocd
   namespace: as-infra
   annotations:
     argocd.argoproj.io/hook: PreSync
