--- a/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/argo-rollout.yaml
+++ b/EKS-ArgoCD-Terraform-Gitops/deployments/charts/root-app/templates/argo-rollout.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app.kubernetes.io/managed-by: Helm  
   annotations:
-    argocd.argoproj.io/hook: PreSync
+    argocd.argoproj.io/hook: Sync
 spec:
   project: default
   source:
